# api_demo_v3

./: .gitignore  CHANGELOG.md  Makefile  README.md  base.py  logging-conf.yaml  main.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: pro.yml
docker/: Dockerfile  docker-compose.yaml  local.env.template
makefiles/: development.mk  test.mk
scripts/: unit-test.sh
src/: app.py  main.py  routers.py  settings.py
src/handlers/: binance.py
src/models/: health.py  order.py  symbol.py
src/services/: binance.py  templates.py  websocket.py
src/templates/: index.html
src/utils/: binance_liquidity_engine.py  binance_ws_client.py  service_utils.py  ws_manager.py
src/views/: binance.py  health.py  templates.py
tests/: fixtures.py
tests/unit/: __init__.py  test_app.py  test_settings.py
