[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Urbano"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "*"}
uvicorn = "*"
fastapi = "^0.85.0"
PyYAML = "^6.0"
aiohttp = "^3.8.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
serve = 'src.main:run_server'

[tool.isort]
line_length = 120
profile = "black"
indent = 4
multi_line_output = 3
include_trailing_comma = true

[[tool.mypy.overrides]]
module = [
    "uvicorn.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
